2017-06-09  Antoine Quint  <graouts@apple.com>

        Rebaseline media/modern-media-controls/layout-node
        https://bugs.webkit.org/show_bug.cgi?id=173203

        Reviewed by Jon Lee.

         The "visible" property no longer sets "display: initial" when true, but rather removes the "display" property altogether.

        * media/modern-media-controls/layout-node/visible-expected.txt:
        * media/modern-media-controls/layout-node/visible.html:
        * platform/ios-simulator/TestExpectations:
        * platform/mac/TestExpectations:

2017-06-09  Antoine Quint  <graouts@apple.com>

        Enable media/modern-media-controls/layout-item
        https://bugs.webkit.org/show_bug.cgi?id=173202

        Reviewed by Jon Lee.

        * platform/ios-simulator/TestExpectations:
        * platform/mac/TestExpectations:

2017-06-09  Antoine Quint  <graouts@apple.com>

        Rebaseline media/modern-media-controls/invalid-placard
        https://bugs.webkit.org/show_bug.cgi?id=173201

        Reviewed by Jon Lee.

        The only required change was to update IconButton to Button since IconButton has been folded in its superclass Button.

        * media/modern-media-controls/invalid-placard/invalid-placard-constrained-metrics-expected.txt:
        * media/modern-media-controls/invalid-placard/invalid-placard-constrained-metrics.html:
        * platform/ios-simulator/TestExpectations:
        * platform/mac/TestExpectations:

2017-06-09  Antoine Quint  <graouts@apple.com>

        Rebaseline media/modern-media-controls/icon-service
        https://bugs.webkit.org/show_bug.cgi?id=173200

        Reviewed by Jon Lee.

        The method we were testing has changed name and the pause icon is no longer a good
        test since it doesn't have a fullscreen variant, so we use the AirPlay icon instead.

        * media/modern-media-controls/icon-service/icon-service-expected.txt:
        * media/modern-media-controls/icon-service/icon-service.html: